feat: implement add event function in event
